# psycare-agent

./: .env.example  .gitignore  Dockerfile.python  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_python_backend.py  0002_agent_framework.py  0003_agent_task_run_id.py
app/: __init__.py  main.py
app/agent/: __init__.py  capabilities.py  skills.py
app/api/: admin.py  chat.py  mcp.py  profile.py  status.py
app/core/: config.py  database.py  deps.py  migrations.py  security.py
app/models/: __init__.py  entities.py  enums.py
app/schemas/: api.py
app/services/: __init__.py  ai.py  assessment.py  chat.py  knowledge.py  memory.py  multimodal.py  prompts.py  reports.py  rules.py  seed.py  tools.py
app/static/: app.js  index.html  styles.css
docs/: facial-expression-recognition-research.md  qwen25-7b-lora-finetune-guide.md
experiments/emotiefflib_lab/: README.md  __init__.py  server.py
experiments/fed_psyau_lab/: README.md  (+2 more)
scripts/: convert-unifer-to-gguf.sh  create-finetuned-model.sh  create-unifer-ollama-model.sh  package-split-release.sh  run-dev-163-mail.sh  run-python-dev.sh
skills/: _shared.py
tests/: test_agent_framework.py  test_ai.py  test_app_contract.py  test_assessment.py  test_chat_tools.py  test_config.py  test_emotiefflib_lab.py  test_fed_psyau_lab.py  test_knowledge.py  test_mcp.py  test_multimodal.py  test_poster_plus_plus_lab.py  test_poster_var_lab.py  test_realtime_camera_lab.py  test_rules.py  test_status_schema.py  test_student_chat_sessions.py  test_unifer_lab.py
(+70 files in other folders)
