[project]
name = "multimodalagent-python"
version = "0.1.0"
description = "Python FastAPI backend for the multimodalAgent campus mental-health assistant."
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.13.3",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.1",
    "fastapi[standard]>=0.115.6",
    "greenlet>=3.1.1",
    "httpx>=0.27.2",
    "openai>=1.57.0",
    "openpyxl>=3.1.5",
    "pillow>=11.0.0",
    "pydantic-settings>=2.6.1",
    "pypdf>=5.1.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
